core/roboconf-core/src/test/resources/configurations/invalid/duplicate-component.graph
component A {
	alias: A;
	installer: whatever;
}

component B {
	alias: B;
	installer: B;
}

component A {
	alias: AA;
	installer: whatever;
}
